# satlight-fast

./: .editorconfig  .gitignore  Cargo.toml  README.md  cpustuff.txt
.cargo/: config.toml
crates/ast/: Cargo.toml
crates/ast/src/: ast.rs  lib.rs  tokens.rs
crates/ast/src/exprs/: aries.rs  literal.rs  mod.rs  op.rs  parentheses.rs  suffix.rs  table.rs
crates/ast/src/stmts/: assign.rs  conditional.rs  function.rs  last.rs  local.rs  mod.rs
crates/common/: Cargo.toml
crates/common/src/location/: position.rs  span.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/macros/src/attributes/: node.rs
crates/macros/src/derive/: getter.rs
crates/macros/src/macros/: mod.rs  operators.rs  symbols.rs
crates/parser/: Cargo.toml
crates/parser/benches/: sample.rs  sample.txt
crates/parser/src/: lib.rs
crates/parser/src/parser/: macros.rs  mod.rs  tests.rs
crates/parser/src/parser/cases/: fail.txt  pass.txt
crates/parser/src/scripts/: profileservice.txt
crates/parser/src/tokenizer/: cursor.rs  mod.rs  old.txt  tokens.rs
crates/parser/src/tokenizer/inner/: mod.rs  tests.rs
crates/parser/src/tokenizer/inner/scripts/: luaminify.txt  profileservice.txt
fuzz/: Cargo.toml
fuzz/in/: script2  script3  script4  script5
fuzz/src/: main.rs
src/: lib.rs  main.rs  sample.txt
xtask/src/: main.rs
