[package]
name = "satlight_parser"
version = "0.1.0"
edition = "2021"

[features]
profiling = ["tracy-client", "profiling/profile-with-tracy"]

[dependencies]
backtrace = "0.3.65"
derive_more = "*"
memchr = "*"
profiling = { git = "https://github.com/memothelemo/profiling" }
satlight_ast = { path = "../ast" }
satlight_common = { path = "../common" }
satlight_macros = { path = "../macros" }
tracy-client = { git = "https://github.com/memothelemo/rust_tracy_client", optional = true }

[dev-dependencies]
criterion = "*"

[[bench]]
name = "sample"
harness = false
